--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="grail"></div>
     <div id="toast"></div>
+    <div id="modal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
