--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="grail"></div>
+    <div id="root"></div>
     <div id="toast"></div>
     <div id="modal"></div>
     <!--
